Updated Product Information.

--- a/index.html
+++ b/index.html
@@ -49,27 +49,27 @@
                     <img class="product-image" src="img/class-a/aidra/class-a-aidra-sonic-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Newcastle, England</h2>
-                        <h3 class="product-model">Fiat Aidra</h3>
+                        <h3 class="product-model">Fiat Aidra Sonic</h3>
                         <h3 class="product-date">1-6 Jan</h3>
-                        <h2 class="product-price">£0.00 Total</h2>
+                        <h2 class="product-price">£429.00 Total</h2>
                     </div>
                 </div>
                 <div class="product-card">
                     <img class="product-image" src="img/class-a/burstner/class-a-burstner-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Hull, England</h2>
-                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h3 class="product-model">Burstner Eliseo Active</h3>
                         <h3 class="product-date">1-6 Jan</h3>
-                        <h2 class="product-price">£0.00 Total</h2>
+                        <h2 class="product-price">£433.00 Total</h2>
                     </div>
                 </div>
                 <div class="product-card">
                     <img class="product-image" src="img/class-a/frankia/class-a-frankia-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Swansea, Wales</h2>
-                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h3 class="product-model">Mercedes Frankia</h3>
                         <h3 class="product-date">1-6 Jan</h3>
-                        <h2 class="product-price">£0.00 Total</h2>
+                        <h2 class="product-price">£457.00 Total</h2>
                     </div>
                 </div>
             </section>
@@ -80,27 +80,27 @@
                     <img class="product-image" src="img/class-b/fiat-mobilvetta/class-b-fiat-mobilvetta-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Lincoln, England</h2>
-                        <h3 class="product-model">Fiat Aidra</h3>
+                        <h3 class="product-model">Fiat Mobilvetta</h3>
                         <h3 class="product-date">1-6 Jan</h3>
-                        <h2 class="product-price">£0.00 Total</h2>
+                        <h2 class="product-price">£480.00 Total</h2>
                     </div>
                 </div>
                 <div class="product-card">
                     <img class="product-image" src="img/class-b/hymer/class-b-hymer-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Edinburgh, Scotland</h2>
-                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h3 class="product-model">Mercedes Hymer</h3>
                         <h3 class="product-date">1-6 Jan</h3>
-                        <h2 class="product-price">£0.00 Total</h2>
+                        <h2 class="product-price">£564.00 Total</h2>
                     </div>
                 </div>
                 <div class="product-card">
                     <img class="product-image" src="img/class-b/merc-winne/class-b-merc-winne-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Hull, England</h2>
-                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h3 class="product-model">Mercedes Winnebago</h3>
                         <h3 class="product-date">1-6 Jan</h3>
-                        <h2 class="product-price">£0.00 Total</h2>
+                        <h2 class="product-price">£516.00 Total</h2>
                     </div>
                 </div>
             </section>
@@ -111,27 +111,27 @@
                     <img class="product-image" src="img/class-c/fiat-ducato/class-c-fiat-ducato-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Guildford, England</h2>
-                        <h3 class="product-model">Fiat Aidra</h3>
+                        <h3 class="product-model">Fiat Ducato</h3>
                         <h3 class="product-date">1-6 Jan</h3>
-                        <h2 class="product-price">£0.00 Total</h2>
+                        <h2 class="product-price">£672.00 Total</h2>
                     </div>
                 </div>
                 <div class="product-card">
                     <img class="product-image" src="img/class-c/ford-roller/class-c-ford-roller-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Aberdeen, Scotland</h2>
-                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h3 class="product-model">Ford Auto Roller</h3>
                         <h3 class="product-date">1-6 Jan</h3>
-                        <h2 class="product-price">£0.00 Total</h2>
+                        <h2 class="product-price">£707.00 Total</h2>
                     </div>
                 </div>
                 <div class="product-card">
                     <img class="product-image" src="img/class-c/merc-coachman/class-c-merc-coachman-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Stirling, Scotland</h2>
-                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h3 class="product-model">Mercedes Coachman</h3>
                         <h3 class="product-date">1-6 Jan</h3>
-                        <h2 class="product-price">£0.00 Total</h2>
+                        <h2 class="product-price">£727.00 Total</h2>
                     </div>
                 </div>
             </section>
@@ -141,28 +141,28 @@
                 <div class="product-card">
                     <img class="product-image" src="img/camper/merc-sprinter/camper-merc-sprinter-1.jpg">
                     <div class="product-info">
-                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
-                        <h3 class="product-model">Fiat Aidra</h3>
+                        <h2 class="product-location">Isle of Skye, Scotland</h2>
+                        <h3 class="product-model">Mercedes Sprinter</h3>
                         <h3 class="product-date">1-6 Jan</h3>
-                        <h2 class="product-price">£0.00 Total</h2>
+                        <h2 class="product-price">£382.00 Total</h2>
                     </div>
                 </div>
                 <div class="product-card">
                     <img class="product-image" src="img/camper/volks-cali/camper-volks-cali-1.jpg">
                     <div class="product-info">
-                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
-                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h2 class="product-location">Cardiff, Wales</h2>
+                        <h3 class="product-model">Volkswagen California</h3>
                         <h3 class="product-date">1-6 Jan</h3>
-                        <h2 class="product-price">£0.00 Total</h2>
+                        <h2 class="product-price">£402.00 Total</h2>
                     </div>
                 </div>
                 <div class="product-card">
                     <img class="product-image" src="img/camper/volks-transport/camper-volks-transport-1.jpg">
                     <div class="product-info">
-                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
-                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h2 class="product-location">Glencoe, Scotland</h2>
+                        <h3 class="product-model">Volkswagen Transport</h3>
                         <h3 class="product-date">1-6 Jan</h3>
-                        <h2 class="product-price">£0.00 Total</h2>
+                        <h2 class="product-price">£421.00 Total</h2>
                     </div>
                 </div>
             </section>
@@ -462,13 +462,13 @@
 
 <!-- ------------- CAMPER - MERC SPRINTER ------------------- -->
 
-<section class="class-c-description-coachman">
+<section class="camper-description-sprinter">
 
     <!-- SCREEN 1 -->
     <section id="product-description-all">
         <div class="product">
             <img class="hero" src="img/camper/merc-sprinter/camper-merc-sprinter-1.jpg" alt="Hero">
-            <h3>..., ...</h3>
+            <h3>Isle of Skye, Scotland</h3>
             <a href=""><h4>Reviews (135)</h4></a>
         </div>
 
@@ -496,13 +496,13 @@
 
 <!-- ------------- CAMPER - VOLKS CALI ------------------- -->
 
-<section class="class-c-description-coachman">
+<section class="camper-description-california">
 
     <!-- SCREEN 1 -->
     <section id="product-description-all">
         <div class="product">
             <img class="hero" src="img/camper/volks-cali/camper-volks-cali-1.jpg" alt="Hero">
-            <h3>..., ...</h3>
+            <h3>Cardiff, Wales</h3>
             <a href=""><h4>Reviews (135)</h4></a>
         </div>
 
@@ -530,13 +530,13 @@
 
 <!-- ------------- CAMPER - VOLKS TRANSPORT ------------------- -->
 
-<section class="class-c-description-coachman">
+<section class="camper-description-transport">
 
     <!-- SCREEN 1 -->
     <section id="product-description-all">
         <div class="product">
             <img class="hero" src="img/camper/volks-transport/camper-volks-transport-1.jpg" alt="Hero">
-            <h3>..., ...</h3>
+            <h3>Glencoe, Scotland</h3>
             <a href=""><h4>Reviews (135)</h4></a>
         </div>
 
