--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Air RV</title>
 	<link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
@@ -25,19 +24,19 @@
             </section>
 			<!-- NAVIGATION -->
 			<div class="icon-bar">
-				<a class="classIcons" href="#">
+				<a class="classIcon-A" href="#">
                     <img class="nav-icon" src="img/icons/class-a.png"/>
                     <span class="icon-text">Class A</span>
                 </a>
-                <a class="classIcons" href="#">
+                <a class="classIcon-B" href="#">
                     <img class="nav-icon" src="img/icons/class-b.png"/>
                     <span class="icon-text">Class B</span>
                 </a>
-                <a class="classIcons" href="#">
+                <a class="classIcon-C" href="#">
                     <img class="nav-icon" src="img/icons/class-c.png"/>
                     <span class="icon-text">Class C</span>
                 </a>
-				<a class="classIcons" href="#">
+				<a class="classIcon-Camper" href="#">
                     <img class="nav-icon" src="img/icons/camper-2.png"/>
                     <span class="icon-text">Camper</span>
                 </a>
@@ -563,6 +562,8 @@
 </section>
 
             <!-- FORM -->
+
+            <section id="form">
                 <div>
                     <a href="#" class="back-button">&#8249;</a>
                 </div>
@@ -617,7 +618,8 @@
             </main>  
         </div>
             </section>
-	        
+            </section>
+                
         <!-- FOOTER NAVIGATION -->
         <nav>
             <div class="nav-item-button">
