Class B Descriptions added.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!-- SCREEN 1 / CLASS A -->
             <section id="screen-1">
                 <div class="product-card">
-                    <img class="product-image" src="img/class-a/aidra/class-a-aidra-sonic-1.jpg">
+                    <img class="product-image" id="product-image-aidra" src="img/class-a/aidra/class-a-aidra-sonic-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Newcastle, England</h2>
                         <h3 class="product-model">Fiat Aidra Sonic</h3>
@@ -76,7 +76,7 @@
                <!-- SCREEN 2 / CLASS B -->
                <section id="screen-2">
                 <div class="product-card">
-                    <img class="product-image" src="img/class-b/fiat-mobilvetta/class-b-fiat-mobilvetta-1.jpg">
+                    <img class="product-image" id="product-image-mobilvetta" src="img/class-b/fiat-mobilvetta/class-b-fiat-mobilvetta-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Lincoln, England</h2>
                         <h3 class="product-model">Fiat Mobilvetta</h3>
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img class="product-image" src="img/class-b/hymer/class-b-hymer-1.jpg">
+                    <img class="product-image" id="product-image-hymer" src="img/class-b/hymer/class-b-hymer-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Edinburgh, Scotland</h2>
                         <h3 class="product-model">Mercedes Hymer</h3>
