Added Links to Class A - Product Descriptiond

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!-- SCREEN 1 / CLASS A -->
             <section id="screen-1">
                 <div class="product-card">
-                    <img class="product-image" src="img/class-a/aidra/class-a-aidra-sonic-1.jpg">
+                    <img class="product-image" id="product-image-aidra" src="img/class-a/aidra/class-a-aidra-sonic-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Newcastle, England</h2>
                         <h3 class="product-model">Fiat Aidra Sonic</h3>
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img class="product-image" src="img/class-a/burstner/class-a-burstner-1.jpg">
+                    <img class="product-image" id="product-image-burstner" src="img/class-a/burstner/class-a-burstner-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Hull, England</h2>
                         <h3 class="product-model">Burstner Eliseo Active</h3>
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img class="product-image" src="img/class-a/frankia/class-a-frankia-1.jpg">
+                    <img class="product-image" id="product-image-frankia" src="img/class-a/frankia/class-a-frankia-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Swansea, Wales</h2>
                         <h3 class="product-model">Mercedes Frankia</h3>
@@ -171,7 +171,7 @@
 <section class="class-a-description-aidra">
 	       
             <!-- SCREEN 1 -->
-            <section id="product-description-all">
+            <section class="product-description-aidra" id="product-description-all">
                 <div class="product">
                     <img class="hero" src="img/class-a/aidra/class-a-aidra-sonic-1.jpg" alt="Hero">
                     <h3>Newcastle, UK</h3>
@@ -191,7 +191,7 @@
 <section class="class-a-description-burstner">
 
             <!-- SCREEN 1 -->
-            <section id="product-description-all">
+            <section class="product-description-burstner" id="product-description-all">
                 <div class="product">
                     <img class="hero" src="img/class-a/burstner/class-a-burstner-1.jpg" alt="Hero">
                     <h3>Hull, UK</h3>
@@ -225,7 +225,7 @@
 <section class="class-a-description-frankia">
    
             <!-- SCREEN 1 -->
-            <section id="product-description-all">
+            <section class="product-description-burstner" id="product-description-all">
                 <div class="product">
                     <img class="hero" src="img/class-a/frankia/class-a-frankia-1.jpg" alt="Hero">
                     <h3>Swansea, UK</h3>
