--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <!-- SCREEN 3 / CLASS C -->
             <section id="screen-3">
                 <div class="product-card">
-                    <img class="product-image" src="img/class-c/fiat-ducato/class-c-fiat-ducato-1.jpg">
+                    <img class="product-image" id="product-image-ducato" src="img/class-c/fiat-ducato/class-c-fiat-ducato-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Guildford, England</h2>
                         <h3 class="product-model">Fiat Ducato</h3>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img class="product-image" src="img/class-c/ford-roller/class-c-ford-roller-1.jpg">
+                    <img class="product-image" id="product-image-roller" src="img/class-c/ford-roller/class-c-ford-roller-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Aberdeen, Scotland</h2>
                         <h3 class="product-model">Ford Auto Roller</h3>
@@ -125,7 +125,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img class="product-image" src="img/class-c/merc-coachman/class-c-merc-coachman-1.jpg">
+                    <img class="product-image" id="product-image-coachman" src="img/class-c/merc-coachman/class-c-merc-coachman-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Stirling, Scotland</h2>
                         <h3 class="product-model">Mercedes Coachman</h3>
@@ -138,7 +138,7 @@
             <!-- SCREEN 4 / CAMPER -->
             <section id="screen-4">
                 <div class="product-card">
-                    <img class="product-image" src="img/camper/merc-sprinter/camper-merc-sprinter-1.jpg">
+                    <img class="product-image" id="product-image-sprinter" src="img/camper/merc-sprinter/camper-merc-sprinter-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Isle of Skye, Scotland</h2>
                         <h3 class="product-model">Mercedes Sprinter</h3>
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img class="product-image" src="img/camper/volks-cali/camper-volks-cali-1.jpg">
+                    <img class="product-image" id="product-image-california" src="img/camper/volks-cali/camper-volks-cali-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Cardiff, Wales</h2>
                         <h3 class="product-model">Volkswagen California</h3>
@@ -156,7 +156,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img class="product-image" src="img/camper/volks-transport/camper-volks-transport-1.jpg">
+                    <img class="product-image" id="product-image-transport" src="img/camper/volks-transport/camper-volks-transport-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Glencoe, Scotland</h2>
                         <h3 class="product-model">Volkswagen Transport</h3>
