fixing the js link

--- a/index.html
+++ b/index.html
@@ -632,6 +632,6 @@
                 <img class="about-icon" src="img/icons/about.png">
             </div>
         </nav>     
-        <script src="../air-rv/js/script.js"></script>
+        <script src="js/script.js"></script>
 </body>
 </html>
